Fix body overlapping header

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     display: flex;
     background: black;
     padding-right: 60px ;
+    z-index: 1;
   }
 
   header ul
